--- a/css/themes/dark.css
+++ b/css/themes/dark.css
@@ -193,6 +193,15 @@
 .dark-theme.fr-popup .fr-colors-tabs .fr-colors-tab.fr-selected-tab {
   color: #42a5f5;
 }
+.dark-theme.fr-popup .fr-color-hex-layer .fr-input-line {
+  padding: 8px 0 0;
+}
+.dark-theme.fr-popup .fr-color-hex-layer .fr-action-buttons button {
+  background-color: #42a5f5;
+}
+.dark-theme.fr-popup .fr-color-hex-layer .fr-action-buttons button:hover {
+  background-color: #128ef2;
+}
 .dark-theme.fr-popup .fr-color-set {
   line-height: 0;
 }
