--- a/css/froala_editor.pkgd.css
+++ b/css/froala_editor.pkgd.css
@@ -2559,6 +2559,36 @@ div.fr-modal-body div.fr-image-list div.fr-image-container .fr-insert-img {
   -webkit-user-select: none;
   -ms-user-select: none;
 }
+.fr-popup .fr-table-colors-hex-layer {
+  width: 100%;
+  margin: 0px;
+  padding: 10px;
+}
+.fr-popup .fr-table-colors-hex-layer .fr-input-line {
+  float: left;
+  width: calc(100% - 50px);
+  padding: 8px 0 0;
+}
+.fr-popup .fr-table-colors-hex-layer .fr-action-buttons {
+  float: right;
+  width: 50px;
+}
+.fr-popup .fr-table-colors-hex-layer .fr-action-buttons button {
+  background-color: #1e88e5;
+  color: #FFF;
+  border-radius: 4px;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  -moz-background-clip: padding;
+  -webkit-background-clip: padding-box;
+  background-clip: padding-box;
+  font-size: 13px;
+  height: 32px;
+}
+.fr-popup .fr-table-colors-hex-layer .fr-action-buttons button:hover {
+  background-color: #166dba;
+  color: #FFF;
+}
 .fr-popup .fr-table-size .fr-table-size-info {
   text-align: center;
   font-size: 14px;
