--- a/css/themes/red.css
+++ b/css/themes/red.css
@@ -495,6 +495,15 @@
 .red-theme .fr-table-resizer div {
   border-right: 1px solid #ffca28;
 }
+.red-theme.fr-popup .fr-table-colors-hex-layer .fr-input-line {
+  padding: 8px 0 0;
+}
+.red-theme.fr-popup .fr-table-colors-hex-layer .fr-action-buttons button {
+  background-color: #ffca28;
+}
+.red-theme.fr-popup .fr-table-colors-hex-layer .fr-action-buttons button:hover {
+  background-color: #f4b800;
+}
 .red-theme.fr-popup .fr-table-size .fr-select-table-size {
   line-height: 0;
 }
