--- a/css/plugins/file.css
+++ b/css/plugins/file.css
@@ -49,7 +49,7 @@
   bottom: 0;
   left: 0;
   right: 0;
-  z-index: 9999;
+  z-index: 2147483640;
   overflow: hidden;
   margin: 0 !important;
   padding: 0 !important;
