--- a/css/plugins/image.css
+++ b/css/plugins/image.css
@@ -110,7 +110,7 @@
   left: 0;
   bottom: 0;
   right: 0;
-  z-index: 9999;
+  z-index: 2147483640;
   display: none;
 }
 .fr-image-upload-layer {
@@ -139,7 +139,7 @@
   bottom: 0;
   left: 0;
   right: 0;
-  z-index: 9999;
+  z-index: 2147483640;
   overflow: hidden;
   margin: 0 !important;
   padding: 0 !important;
