--- a/css/froala_editor.pkgd.css
+++ b/css/froala_editor.pkgd.css
@@ -173,6 +173,10 @@ iframe.fr-iframe {
   background: #b5d6fd;
   color: #000000;
 }
+.fr-wrapper ::selection {
+  background: #b5d6fd;
+  color: #000000;
+}
 .fr-box.fr-basic .fr-wrapper {
   background: #ffffff;
   border: 0px;
