--- a/css/themes/gray.css
+++ b/css/themes/gray.css
@@ -74,6 +74,10 @@
   background: #b5d6fd;
   color: #000000;
 }
+.gray-theme .fr-wrapper ::selection {
+  background: #b5d6fd;
+  color: #000000;
+}
 .gray-theme.fr-box.fr-basic .fr-wrapper {
   background: #ffffff;
   border: 0px;
