--- a/css/themes/red.css
+++ b/css/themes/red.css
@@ -1009,12 +1009,8 @@
   -ms-transition: height 0.2s ease 0s;
   -o-transition: height 0.2s ease 0s;
 }
-.red-theme.fr-modal .fr-modal-wrapper .fr-modal-head i,
-.red-theme.fr-modal .fr-modal-wrapper .fr-modal-head svg {
+.red-theme.fr-modal .fr-modal-wrapper .fr-modal-head .fr-modal-close {
   color: #ffffff;
-}
-.red-theme.fr-modal .fr-modal-wrapper .fr-modal-head i.fr-modal-close,
-.red-theme.fr-modal .fr-modal-wrapper .fr-modal-head svg.fr-modal-close {
   top: 0;
   right: 0;
   -webkit-transition: color 0.2s ease 0s;
