Fixes froala/wysiwyg-editor#2561.

--- a/css/themes/dark.css
+++ b/css/themes/dark.css
@@ -35,7 +35,7 @@
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 1px 1px rgba(0, 0, 0, 0.16);
   height: 32px;
   width: 32px;
-  background: #ffffff;
+  background: #353535;
   color: #42a5f5;
   -webkit-transition: background 0.2s ease 0s, color 0.2s ease 0s, transform 0.2s ease 0s;
   -moz-transition: background 0.2s ease 0s, color 0.2s ease 0s, transform 0.2s ease 0s;
