Fixes froala/wysiwyg-editor#2551.

--- a/css/themes/dark.css
+++ b/css/themes/dark.css
@@ -981,7 +981,7 @@
   -webkit-background-clip: padding-box;
   background-clip: padding-box;
   margin: 20px auto;
-  background: #ffffff;
+  background: #353535;
   -webkit-box-shadow: 0 5px 8px rgba(0, 0, 0, 0.19), 0 4px 3px 1px rgba(0, 0, 0, 0.14);
   -moz-box-shadow: 0 5px 8px rgba(0, 0, 0, 0.19), 0 4px 3px 1px rgba(0, 0, 0, 0.14);
   box-shadow: 0 5px 8px rgba(0, 0, 0, 0.19), 0 4px 3px 1px rgba(0, 0, 0, 0.14);
