--- a/css/themes/red.css
+++ b/css/themes/red.css
@@ -981,7 +981,7 @@
   -webkit-background-clip: padding-box;
   background-clip: padding-box;
   margin: 20px auto;
-  background: #ffffff;
+  background: #b8312f;
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
   box-shadow: none;
