Fixes froala/wysiwyg-editor#2659.

--- a/css/froala_style.css
+++ b/css/froala_style.css
@@ -60,6 +60,7 @@ img.fr-shadow,
   border-collapse: collapse;
   empty-cells: show;
   max-width: 100%;
+  table-layout: fixed;
 }
 .fr-view table.fr-dashed-borders td,
 .fr-view table.fr-dashed-borders th {
