Fixes resize handlers for PRE in IE.

--- a/css/froala_style.css
+++ b/css/froala_style.css
@@ -112,6 +112,7 @@ img.fr-shadow,
 .fr-view pre {
   white-space: pre-wrap;
   word-wrap: break-word;
+  overflow: visible;
 }
 .fr-view[dir="rtl"] blockquote {
   border-left: none;
