update "fill-available" to "stretch"
The spec has been updated to use the term "stretch" instead of "fill-available".

https://developer.mozilla.org/en-US/docs/Web/CSS/width

--- a/css/froala_editor.pkgd.css
+++ b/css/froala_editor.pkgd.css
@@ -1987,7 +1987,7 @@ textarea.fr-code {
   /* WebKit-based browsers will ignore this. */
   width: -webkit-fill-available;
   /* Mozilla-based browsers will ignore this. */
-  width: fill-available; }
+  width: stretch; }
   .fr-popup .fr-files-progress-bar-layer > h3 {
     font-size: 16px;
     margin: 10px 0;
@@ -2044,7 +2044,7 @@ textarea.fr-code {
   /* WebKit-based browsers will ignore this. */
   width: -webkit-fill-available;
   /* Mozilla-based browsers will ignore this. */
-  width: fill-available; }
+  width: stretch; }
 
 .fr-uploading {
   -webkit-opacity: 0.4;
@@ -2108,7 +2108,7 @@ textarea.fr-code {
   /* WebKit-based browsers will ignore this. */
   width: -webkit-fill-available;
   /* Mozilla-based browsers will ignore this. */
-  width: fill-available; }
+  width: stretch; }
 
 @media screen and (max-width: 399px) {
   .fr-upload-section {
